fixing spacing of new idea textbox and some less cleanup

--- a/public/less/orter.less
+++ b/public/less/orter.less
@@ -38,12 +38,9 @@
     -moz-border-left-colors: #555 #666 #777 #999 #999 #888 #777 #666;
     -moz-border-right-colors: #666 #777 #888 #bbb #ccc #eee #eee #eee;
 
-	  -webkit-box-shadow: 3px 7px 3px #888;
-    -moz-box-shadow: 3px 7px 3px   #888;
-    box-shadow: 3px 7px 3px   #888;
-    -webkit-border-radius: 15px 15px 15px 15px;
-    -moz-border-radius: 15px 15px 15px 15px;
-    border-radius: 15px 15px 15px 15px;
+
+    .shadow(3px,7px,3px,#888);
+	  .round-corner(15px);
     overflow: auto;
     width: 95%;
     min-height:643px;
@@ -131,7 +128,6 @@
 .points{
   overflow: auto;
   padding:0.25em;
-  margin-bottom: 10em;
 }
 
 .addStickyForm{
@@ -139,21 +135,15 @@
 }
 
 .addStickyForm textarea{
-  box-shadow: 5px 1px 3px #888;
-  -webkit-box-shadow: 5px 1px 3px #888;
-  -moz-box-shadow: 5px 1px 3px #888;
+  .shadow(5px,1px,3px,#888);
 }
 
 .sticky{
-  box-shadow: 3px 1px 3px #888;
-  -webkit-box-shadow: 3px 1px 3px #888;
-  -moz-box-shadow: 3px 1px 3px #888;
+  .shadow(3px,1px,3px,#888)
 }
 
 .ui-widget-content{
-  box-shadow:2px 10px 29px #888888;
-  -webkit-box-shadow:2px 10px 29px #888888;
-  -moz-box-shadow:2px 10px 29px #888888;
+  .shadow(2px,10px,29px,#888)
 }
 
 .sticky,.addStickyForm textarea{
